[metadata]
name = mt4reader
version = 0.1dev0
summary = MT4 HST file reader/converter
license = GPLv3
author-email = nigel.sim@gmail.com
author = nigel.sim
home-page = https://github.com/nigelsim/mt4reader

[files]
packages = 
	mt4reader

[entry_points]
console_scripts = 
	mt4convert = mt4reader:main

